Fix for a type issue breaking build under MacOS 10.8 and Boost 1.53.0 (stems from shared_array<>(0) in initialization list for empty ctor)
svn path=/software/LOOS/trunk/; revision=9326

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-07  Tod Romo  <tromo@gorgoneion>
+
+	* Fixed build issue with MacOS 10.8 and BOOST 1.53.0 involving
+	MatrixStorage.hpp
+
 2013-02-01    <tromo@spade.biophysics.rochester.edu>
 
 	* Released 2.0.3
