--- a/loos.dox
+++ b/loos.dox
@@ -379,16 +379,21 @@ segid == "BULK")    # or named BULK
 
 /*! \page building Building LOOS
 \section basicbuild Building Basics
-LOOS requires <A href="http://www.scons.org" target="_blank">SCons</A> to build.  It also
-requires the vecLib framework and Developer's Tools for OS X or <A
-href="http://math-atlas.sourceforge.net" target="_blank">Atlas</A> for Linux.  It also
-requires the <A href="http://boost.org" target="_blank">Boost</A> libraries for both
-(including the regular expression library).  If you plan to modify the parser (you probably don't), you'll need the
+LOOS requires <A href="http://www.scons.org" target="_blank">SCons</A> and 
+the <A href="http://boost.org" target="_blank">Boost</A> libraries.
+For macs, it also requires 
+<A href="https://itunes.apple.com/us/app/xcode/id497799835?mt=12"
+target="_blank">XCode</A> be installed (free download from the Mac App
+Store).
+On Linux, 
+<A
+href="http://math-atlas.sourceforge.net" target="_blank">Atlas</A> 
+is <em>strongly</em> recommended, although standard LAPACK and BLAS
+should work.
+If you plan to modify the parser (you probably don't), you'll need the
 GNU utilities <A href="http://www.gnu.org/software/flex/">flex</A> and
 <A href="http://www.gnu.org/software/bison/">bison</A>.  Similarly, if
-you want to rebuild the documentation, you'll need to install
-Doxygen.  For information regarding building LOOS on a specific OS,
-see \ref platform.
+you want to rebuild the documentation, you'll need to install Doxygen.
 
 If your libraries are installed in non-standard locations, you may need to 
 tell LOOS where its required components are.  To do this, do the following:
@@ -397,6 +402,10 @@ cp custom.py-proto custom.py
 \endverbatim
 Then edit your \c custom.py file to tell SCons and LOOS where your
 libraries are.
+
+<B>NOTE</B><br>
+More complete build information, along with platform specific notes,
+can be found in the INSTALL file included with LOOS.
 
 \subsection compiling Compiling
 
@@ -526,156 +535,6 @@ your own tools.
 
 
 <hr>
-
-\section platform Platform Specific Notes
-
-\subsection fedora Fedora
-
-We recommend you use the the \c yum tool that comes with Fedora to
-install the required packages.  You will need, at a minimum, to
-install atlas, boost, and SCons.  Fedora splits many packages into the
-libraries necessary to run and the libraries and headers necessary for
-development.  You will need to be sure to install the development
-versions as well.  These can be easily installed using "yum":
-
-\verbatim
-sudo yum install scons.noarch boost-devel.x86_64 atlas-devel.x86_64
-\endverbatim
-
-
-
-\subsection ubuntu Ubuntu
-LOOS has been tested on Ubuntu 8-10.  The following instructions have
-been used to install LOOS on a fresh 64-bit 10.10 installation.  Use
-the Ubuntu software center (or apt-get) to install the following
-packages:
-	- g++
-	- scons
-	- libboost-all-devel
-	- libatlas-dev
-	- libatlas-base-dev
-
-Optionally, you can install a machine-specific atlas, however, you
-must still install the packages above.  For example, on an i7 machine,
-install both atlas packages listed above as well as
-libatlas3gf-corei7sse3.
-
-NOTE: Ubuntu 10.04 LTS x86_64 uses libboost1.40-all-dev instead of
-libboost-all-devel.
-
-NOTE:  Older version of Ubuntu may vary the names of the BOOST
-libraries.  If you see link errors related to boost libraries, then
-you will need to setup a custom.py file.  Copy the custom.py-proto to
-custom.py and find the appropriate library names (in /usr/lib64) and
-edit the custom.py file to reflect these names.
-
-<em>The following additional installation tips come courtesy of Dow Hurst:</em>
-
-To get the most currently available version of scons for Ubuntu Hardy 8.04 you have to add a
-PPA repository.  Do this by getting the server key first, and then add the repository to the
-/etc/apt/sources.list file.  The command and repository listing is below
-
-\verbatim
-sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com B5140445
-
-deb http://ppa.launchpad.net/medigeek/experimental/ubuntu hardy main 
-deb-src http://ppa.launchpad.net/medigeek/experimental/ubuntu hardy main
-
-apt-get update
-
-apt-get install scons libboost-dev libboost-date-time-dev libboost-doc libboost-filesystem-dev libboost-graph-dev \
-                libboost-iostreams-dev libboost-program-options-dev libboost-python-dev libboost-regex-dev  \
-                libatlas-base-dev libatlas-headers liblapack-dev
-\endverbatim
-
-Copy custom.py-proto to custom.py
-
-Modify custom.py for the BOOSTREGEX and BOOSTPO variables so the lines look like this:
-
-\verbatim
-### This is the name of the boost-regex library
-## Uncomment the following for Ubuntu
-BOOSTREGEX='boost_regex-mt'
-
-
-### This is the name of the boost-program-options Library
-## Uncomment the following for Ubuntu
-BOOSTPO='boost_program_options-mt'
-\endverbatim
-
-Then issue the following command using sudo:
-
-\verbatim
-sudo scons release=1 PREFIX=/opt/LOOS-1.5.4 install
-\endverbatim
-
-If you have root access then you can forget the sudo and issue the command without it.
-
-\subsection Debian
-
-Loos has been tested with: 5.0.6
-
-Using the synaptic manager (or apt-get), install the following packages:
-      - libboost-dev
-      - scons
-      - libatlas-base-dev
-      - libatlas-headers
-      - libatlas3gf-base (optional)
-
-
-
-
-\subsection openSUSE
-LOOS has been tested with: 11.3
-
-There is no pre-built ATLAS package (that we could find) for
-openSUSE.  LOOS will use the blas packages instead.  You will need to
-install lapack, blas, boost, and SCons.  Using zypper (or your
-favorite package manager), install the following:
-
-\verbatim
-sudo zypper install scons boost-devel lapack lapack3
-\endverbatim
-
-You should get the blas as a dependency for lapack.  You may also have lapack3
-installed by default, however we've found that lapack must also be installed
-in order to build LOOS.
-
-\subsection osx MacOS X
-
-First, make sure you have the Developer's Tools (i.e. XCode) installed.  You
-can find it on your MacOS X install disk or, alternatively, you can sign up for
-a free account with the Apple Developer's Connection and download the latest
-version.  In the most recent versions, the command line tools are a separate
-download, so you'll need to run XCode, open the Preferences window, and go to
-the Downloads panel; from there, you can select the option to download the
-command lline tools. Next, you will need to install SCons (http://scons.org)
-and Boost (http://boost.org) by visiting their websites, downloading the
-software, and following their installation instructions.  You will also need to
-create a \c custom.py file to tell LOOS where to find the libraries and headers
-that it needs.  Copy the \c custom.py-proto to \c custom.py and edit it.  In
-particular, look at the \c BOOSTREGEX and \c BOOSTPO variables for the boost
-regular expression library and program options libraries.  You will most likely
-need to change these names...
-
-\subsection cygwin
-Tested versions: 1.7.7
-
-You will need to install libboost-devel and liblapack-devel along with
-the g++ compiler using the cygwin setup.exe program.  (Note: if loos
-still does not build, try installing the additional lapack and boost
-packages).  There is no atlas package that we could find for cygwin,
-so the native lapack/blas will be used instead.
-
-There is no scons install option from setup.exe, so you need to
-manually download the latest scons distribution from
-http://www.scons.org/download.php (the gzip tar file) and install it.
-
-The boost libraries cygwin uses have different names than what the
-default build of LOOS expects.  You will need to set up a new
-custom.py file.  Copy the "custom.py-proto" file in the loos directory
-to "custom.py".  Look for the BOOSTPO and BOOSTREGEX symbols and
-uncomment the appropriate lines.
 
 
 <hr>
