--- a/loos.dox
+++ b/loos.dox
@@ -2404,6 +2404,11 @@ Here, the changes to the first alpha-carbon in duplicate does
 <i>not</i> change the coordinates of the first alpha-carbon in ca
 since they are no longer shared.
 
+<DT> I am having trouble building LOOS with Boost 1.52 (or later)
+<DD> There was a change in Boost at version 1.52 that breaks the build
+of LOOS.  We recommend upgrading to either LOOS 2.0.4 or downgrading
+your version of Boost to 1.51.
+
 </DL>
 
 <hr><hr>
