--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-28    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Changed PSF reader to NOT try to use hybrid-36 encoding.  This
+	affected large systems that should have been readable but
+	weren't.
+
 2013-03-27    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed performance issue with writing PDB files containing bonds
