--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-04-01    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Changed build procedure(s).  To build pyloos, use "scons
+	pyloos=1".  PyLOOS can now be installed with "scons pyloos=1
+	install".  Only PyLOOS can be built by using "scons pyloos_only".
+
 2013-03-28    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed PSF reader to NOT try to use hybrid-36 encoding.  This
