--- a/loos.dox
+++ b/loos.dox
@@ -15,6 +15,7 @@ School of Medicine & Dentistry, University of Rochester\n
 <h2>Quick Links</h2>
       -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the mailing list</a>
+      -  Ask the developers a question at loos-maintainer@urmc.rochester.edu
       - \subpage building "Building LOOS"
           - \ref building_pyloos "Building PyLOOS, the Python Interface to LOOS"
       - \subpage tools "Tools included with LOOS"
