--- a/loos.dox
+++ b/loos.dox
@@ -3,7 +3,7 @@
 \mainpage Lightweight Object-Oriented Structure library (LOOS)
 
 
-Copyright &copy; 2008-2012, Tod D. Romo, Alan Grossfield\n
+Copyright &copy; 2008-2013, Tod D. Romo, Alan Grossfield\n
 Department of Biochemistry and Biophysics\n
 School of Medicine & Dentistry, University of Rochester\n
 
@@ -12,10 +12,14 @@ School of Medicine & Dentistry, University of Rochester\n
 
 <hr>
 
+<h2>Important News</h2>
+Our email address has changed.  Please use loos.maintainer@gmail.com to contact us regarding LOOS.
+<hr>
+
 <h2>Quick Links</h2>
       -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the mailing list</a>
-      -  Ask the developers a question at loos-maintainer@urmc.rochester.edu
+      -  Ask the developers a question at loos.maintainer@gmail.com
       - \subpage building "Building LOOS"
           - \ref building_pyloos "Building PyLOOS, the Python Interface to LOOS"
       - \subpage tools "Tools included with LOOS"
